--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: main
     tags:
-      - '[0-9]+.*'
+      - "[0-9]+.*"
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
           DRY_RUN: true
           DEFAULT_BUMP: patch
           BRANCH_HISTORY: compare
-          TAG_NAME: 'v${{ steps.taggerDryRun.outputs.new_tag }}'
+          TAG_NAME: "v${{ steps.taggerDryRun.outputs.new_tag }}"
 
       - name: echo new tag
         run: |
@@ -52,7 +52,7 @@ jobs:
           WITH_V: true
           DEFAULT_BUMP: patch
           BRANCH_HISTORY: compare
-          TAG_NAME: 'v${{ steps.taggerFinal.outputs.new_tag }}'
+          TAG_NAME: "v${{ steps.taggerFinal.outputs.new_tag }}"
 
       - name: Generate release notes
         id: release_notes
@@ -60,7 +60,7 @@ jobs:
           notes=$(git log --oneline --decorate --no-merges "${{ steps.taggerFinal.outputs.tag }}..${{ steps.taggerFinal.outputs.new_tag }}")
           echo "::set-output name=notes::${notes}"
 
-      - name: 'Generate tag and create release'
+      - name: "Generate tag and create release"
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -70,13 +70,3 @@ jobs:
           release_name: Release ${{ steps.taggerFinal.outputs.new_tag }}
           body: ${{ steps.release_notes.outputs.notes }}
           draft: false
-
-      - name: 'Generate changelog and create release'
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: '${{ steps.taggerFinal.outputs.new_tag }}'
-          prerelease: false
-          title: 'Last build: ${{ steps.taggerFinal.outputs.new_tag }}'
-          files: |
-            *
