--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -62,16 +62,16 @@ jobs:
           notes=$(git log --oneline --decorate --no-merges "${{ steps.taggerFinal.outputs.tag }}..${{ steps.taggerFinal.outputs.new_tag }}")
           echo "::set-output name=notes::${notes}"
 
-      - name: "Generate tag and create release"
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.taggerFinal.outputs.new_tag }}
-          release_name: Release ${{ steps.taggerFinal.outputs.new_tag }}
-          body: ${{ steps.release_notes.outputs.notes }}
-          draft: false
+      # - name: "Generate tag and create release"
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ steps.taggerFinal.outputs.new_tag }}
+      #     release_name: Release ${{ steps.taggerFinal.outputs.new_tag }}
+      #     body: ${{ steps.release_notes.outputs.notes }}
+      #     draft: false
 
       - name: "Generate changelog and create release"
         uses: marvinpinto/action-automatic-releases@latest
