--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -29,7 +29,7 @@ jobs:
           WITH_V: true
           DRY_RUN: true
           DEFAULT_BUMP: patch
-          BRANCH_HISTORY: compare
+          BRANCH_HISTORY: full
           TAG_NAME: "v${{ steps.taggerDryRun.outputs.new_tag }}"
 
       - name: echo new tag
@@ -51,32 +51,36 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: patch
-          BRANCH_HISTORY: compare
+          BRANCH_HISTORY: full
           TAG_NAME: "v${{ steps.taggerFinal.outputs.new_tag }}"
 
-      # - name: Generate release notes
-      #   id: release_notes
-      #   run: |
-      #     notes=$(git log --oneline --decorate --no-merges "${{ steps.taggerFinal.outputs.tag }}..${{ steps.taggerFinal.outputs.new_tag }}")
-      #     echo "::set-output name=notes::${notes}"
+          # - name: Generate release notes
+          #   id: release_notes
+          #   run: |
+          #     notes=$(git log --oneline --decorate --no-merges "${{ steps.taggerFinal.outputs.tag }}..${{ steps.taggerFinal.outputs.new_tag }}")
+          #     echo "::set-output name=notes::${notes}"
 
-      - name: "Generate tag and create release"
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # - name: "Generate tag and create release"
+          #   id: create_release
+          #   uses: actions/create-release@v1
+          #   env:
+          #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #   with:
+          #     tag_name: ${{ steps.taggerFinal.outputs.new_tag }}
+          #     release_name: Release ${{ steps.taggerFinal.outputs.new_tag }}
+          #     body: ${{ steps.release_notes.outputs.notes }}
+          #     draft: false
+
+      - name: "Build & test"
+        run: |
+          echo "done!"
+
+      - name: "Generate changelog and create release"
+        uses: marvinpinto/action-automatic-releases@latest
         with:
-          tag_name: ${{ steps.taggerFinal.outputs.new_tag }}
-          release_name: Release ${{ steps.taggerFinal.outputs.new_tag }}
-          body: ${{ steps.release_notes.outputs.notes }}
-          draft: false
-
-      # - name: "Generate changelog and create release"
-      #   uses: marvinpinto/action-automatic-releases@latest
-      #   with:
-      #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-      #     automatic_release_tag: "${{ steps.taggerFinal.outputs.new_tag }}"
-      #     prerelease: false
-      #     title: "Last build: ${{ steps.taggerFinal.outputs.new_tag }}"
-      #     files: |
-      #       *
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ steps.taggerFinal.outputs.new_tag }}"
+          prerelease: false
+          title: "Last build: ${{ steps.taggerFinal.outputs.new_tag }}"
+          files: |
+            *
