--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -29,7 +29,7 @@ jobs:
           WITH_V: true
           DRY_RUN: true
           DEFAULT_BUMP: patch
-          BRANCH_HISTORY: full
+          BRANCH_HISTORY: compare
           TAG_NAME: "v${{ steps.taggerDryRun.outputs.new_tag }}"
 
       - name: echo new tag
@@ -51,7 +51,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: patch
-          BRANCH_HISTORY: full
+          BRANCH_HISTORY: compare
           TAG_NAME: "v${{ steps.taggerFinal.outputs.new_tag }}"
 
       - name: Generate release notes
@@ -60,26 +60,22 @@ jobs:
           notes=$(git log --oneline --decorate --no-merges "${{ steps.taggerFinal.outputs.tag }}..${{ steps.taggerFinal.outputs.new_tag }}")
           echo "::set-output name=notes::${notes}"
 
-      # - name: "Generate tag and create release"
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: ${{ steps.taggerFinal.outputs.new_tag }}
-      #     release_name: Release ${{ steps.taggerFinal.outputs.new_tag }}
-      #     body: ${{ steps.release_notes.outputs.notes }}
-      #     draft: false
-
-      - name: "Build & test"
-        run: |
-          echo "done!"
+      - name: "Generate tag and create release"
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.taggerFinal.outputs.new_tag }}
+          release_name: Release ${{ steps.taggerFinal.outputs.new_tag }}
+          body: ${{ steps.release_notes.outputs.notes }}
+          draft: false
 
       - name: "Generate changelog and create release"
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
+          automatic_release_tag: "${{ steps.taggerFinal.outputs.new_tag }}"
           prerelease: false
           title: "Last build: ${{ steps.taggerFinal.outputs.new_tag }}"
           files: |
